Express server port, hover effects, spacing fixes, and rounded.

--- a/src/public/global.css
+++ b/src/public/global.css
@@ -1,11 +1,13 @@
 :root {
-    --border-color: rgb(83, 83, 83);
+    --border-color: rgb(63, 63, 63);
 
-    --primary-color: rgb(20, 20, 20);
-    --secondary-color: rgb(26, 26, 26);
+    --primary-color: rgb(24, 24, 24);
+    --secondary-color: rgb(47, 47, 47);
 
-    --success-color: rgb(101, 255, 84);
-    --success-color-accent: rgb(91, 229, 75);
+    --success-color: rgb(69, 238, 50);
+    --success-color-accent: rgb(47, 207, 29);
+
+    --rounded-radius: 10px;
 }
 
 .center {
@@ -29,7 +31,12 @@
 
 .success-btn {
     background-color: var(--success-color);
-    box-shadow: 0px 4px var(--success-color-accent);
+    box-shadow: 0px 8px var(--success-color-accent);
+    transition: background-color 0.3s ease;
+}
+
+.success-btn:hover {
+    background-color: var(--success-color-accent);
 }
 
 .success-btn:active {
