--- a/src/public/pages/report/styles/reviewpanel.css
+++ b/src/public/pages/report/styles/reviewpanel.css
@@ -9,6 +9,8 @@
     background-color: var(--secondary-color);
 
     border: 2px solid var(--border-color);
+    
+    border-radius: var(--rounded-radius);
 }
 
 @media (min-width: 1264px) {
@@ -72,7 +74,7 @@
     GAME LOAD TYPE DROPDOWN
 */
 #load-type-dropdown-container {
-    margin-bottom: 5px;
+    margin-bottom: 20px;
 }
 
 #load-type-dropdown {
@@ -90,8 +92,10 @@
     height: 130px;
     resize: none;
 
-    border-radius: 10px;
+    border-radius: var(--rounded-radius);
     background-color: var(--border-color);
+    outline: none;
+    padding: 10px;
 }
 
 /*
@@ -181,6 +185,7 @@
 #status-message {
     text-align: center;
     color: rgb(255, 53, 53);
+    margin: 10px 0;
 }
 
 /*
@@ -237,16 +242,20 @@
 
 #review-panel-toolbar-buttons {
     margin: 10px;
-    gap: 10px;
+    gap: 15px;
     flex-wrap: wrap;
     transition: gap 0.5s ease;
 }
 
 #review-panel-toolbar-buttons img {
     cursor: pointer;
-    transition: transform 0.5s ease;
+    width: 30px;
 }
 
 #review-panel-toolbar-buttons img:hover {
-    transform: translateY(-3px);
+    opacity: 0.7;
+}
+
+#review-panel-toolbar-buttons img:active {
+    opacity: 0.5;
 }
